Bug 445473 - "Open Resource Folder" uses wrong path
Summary: "Open Resource Folder" uses wrong path
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-14 12:17 UTC by Andreas Resch
Modified: 2021-11-15 08:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Resch 2021-11-14 12:17:10 UTC
When you click on the "Open Resource Folder" button in the Resource Manager, it opens the default "krita" folder in the Appdata/Roaming folder instead of the one defined in the Resources section of the geenral Krita settings.


SOFTWARE/OS VERSIONS
Windows: 10 64-Bit
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
Comment 1 Bug Janitor Service 2021-11-14 12:23:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1156
Comment 2 Halla Rempt 2021-11-15 08:07:11 UTC
Git commit cd9295eea44407b1b47a45cc034a83fa571c8d3d by Halla Rempt.
Committed on 14/11/2021 at 12:22.
Pushed by dkazakov into branch 'master'.

Open the configured resource folder

M  +2    -2    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/cd9295eea44407b1b47a45cc034a83fa571c8d3d
Comment 3 Dmitry Kazakov 2021-11-15 08:08:37 UTC
Git commit c43563823584709bee1c7aa00c386977867732bf by Dmitry Kazakov, on behalf of Halla Rempt.
Committed on 15/11/2021 at 08:08.
Pushed by dkazakov into branch 'krita/5.0'.

Open the configured resource folder

M  +2    -2    libs/ui/KisViewManager.cpp

https://invent.kde.org/graphics/krita/commit/c43563823584709bee1c7aa00c386977867732bf