Open the configured resource folder

BUG:445473